--- a/style.css
+++ b/style.css
@@ -1,3 +1,45 @@
 body {
     background: whitesmoke;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+  }
+  h1 {
+    color:blue;
+    text-align:center;
+  }
+  h2 {
+    color:grey;
+    text-align:center;
+  }
+h3 {
+    text-align:center;
+}
+
+
+p {
+    text-align:center;
+}
+
+ul {
+    text-align:left;
+    list-style-position: inside;
+    display: table;
+    margin: 0 auto;
+}
+
+  img {
+    /*align-content: center;*/
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+button {
+    align-items: center;
+    width: 10%;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;  
+    justify-content: center;  
   }
